--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 
-  <img src="https://images.unsplash.com/photo-1568639036126-5c88b9b47fbd" alt="guah pen bobok jadi poto nya nyusul yah🤭" width="150">
+  <img src="https://ibb.co/DBzYKFD" alt="guah pen bobok jadi poto nya nyusul yah🤭" width="150">
 
   <marquee behavior="scroll" direction="left">𝙎𝙀𝙇𝘼𝙈𝘼𝙏 𝘿𝘼𝙏𝘼𝙉𝙂 𝘿𝙄 𝙒𝙀𝘽𝙎𝙄𝙏𝙀 𝙆𝙀𝙔𝙕𝙕</marquee>
 
