--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 
-  <img src="https://i.imgur.com/XtW37Zb.jpg" alt="masuk yah"width="150">
+  <img src="https://i.imgur.com/XtW37Zb.jpg" alt="masuk yah">
 
   <marquee behavior="scroll" direction="left">𝙎𝙀𝙇𝘼𝙈𝘼𝙏 𝘿𝘼𝙏𝘼𝙉𝙂 𝘿𝙄 𝙒𝙀𝘽𝙎𝙄𝙏𝙀 𝙆𝙀𝙔𝙕𝙕</marquee>
 
