--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8">
   <title>Website BY KEYZZ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -15,6 +16,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      text-align: center;
     }
 
     marquee {
@@ -26,6 +28,7 @@
 
     h1, h5, h6 {
       color: white;
+      margin: 10px 0;
     }
 
     .tombol {
@@ -37,18 +40,25 @@
       font-size: 20px;
       cursor: pointer;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-      margin-bottom: 10px;
+      margin-bottom: 20px;
+      font-weight: bold;
     }
 
     .tombol:hover {
       background-color: black;
       color: yellow;
     }
+
+    img {
+      max-width: 90%;
+      height: auto;
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 <body>
 
-  <img src="https://i.ibb.co/S3XJ8Y0/logo-tulalit.png" alt="masuk yah" width="300">
+  <img src="https://i.ibb.co/S3XJ8Y0/logo-tulalit.png" alt="Logo Tulalit" width="300">
 
   <marquee behavior="scroll" direction="left">𝙎𝙀𝙇𝘼𝙈𝘼𝙏 𝘿𝘼𝙏𝘼𝙉𝙂 𝘿𝙄 𝙒𝙀𝘽𝙎𝙄𝙏𝙀 𝙆𝙀𝙔𝙕𝙕</marquee>
 
@@ -66,6 +76,3 @@
 
 </body>
 </html>
-<!-- HALO HYTAM👋
-JADI INI ADALAH SCRIPT DARI WEBSITE SEDERHANA
-YG GUA BIKIN SENDIRI, KALIAN BISA UTAK ATIK DAN ACAK² SCRIPT WEBSITE INI -->
