--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 
-  <img src="https://i.ibb.co/S3XJ8Y0/logo-tulalit.png" alt="Logo Tulalit" width="300">
+  <img src="<a href="https://ibb.co/DBzYKFD"><img src="https://i.ibb.co/DBzYKFD/20250518-223658.jpg" alt="20250518-223658" border="0">
 
   <marquee behavior="scroll" direction="left">𝙎𝙀𝙇𝘼𝙈𝘼𝙏 𝘿𝘼𝙏𝘼𝙉𝙂 𝘿𝙄 𝙒𝙀𝘽𝙎𝙄𝙏𝙀 𝙆𝙀𝙔𝙕𝙕</marquee>
 
