--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 
-  <img src="https://imgur.com/a/MCqtFEG#xL9RBig" alt="TULALITZ-MD" border="20">
+    <img src="https://i.imgur.com/xL9RBig.jpeg" alt="IKI HYTAM APAY JAWA" border="20">
 
   <marquee behavior="scroll" direction="left">𝙎𝙀𝙇𝘼𝙈𝘼𝙏 𝘿𝘼𝙏𝘼𝙉𝙂 𝘿𝙄 𝙒𝙀𝘽𝙎𝙄𝙏𝙀 𝙆𝙀𝙔𝙕𝙕</marquee>
 
