--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 </head>
 <body>
 
-    <img src="https://i.imgur.com/xL9RBig.jpeg" alt="IKI HYTAM APAY JAWA" width="120">
-
+ 
+<img src="https://i.imgur.com/xL9RBig.jpeg" alt="IKI HYTAM APAY JAWA" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;">
+  
   <marquee behavior="scroll" direction="left">𝙎𝙀𝙇𝘼𝙈𝘼𝙏 𝘿𝘼𝙏𝘼𝙉𝙂 𝘿𝙄 𝙒𝙀𝘽𝙎𝙄𝙏𝙀 𝙆𝙀𝙔𝙕𝙕</marquee>
 
   <h5>GB TULALITZ-MD</h5>
