--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background: linear-gradient(to bottom, #000000, #ffffff);
+      background: https://i.imgur.com/dNyEB3g.jpeg (to bottom, #000000, #ffffff);
       height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
