--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background: https://i.imgur.com/dNyEB3g.jpeg (to bottom, #000000, #ffffff);
+      background: url('https://i.imgur.com/xL9RBig.jpeg') no-repeat center center fixed;
+      background-size: cover;
       height: 100vh;
       margin: 0;
       font-family: Arial, sans-serif;
@@ -23,7 +24,8 @@
       font-size: 20px;
       font-weight: bold;
       margin-bottom: 24px;
-      color: black;
+      color: yellow;
+      text-shadow: 2px 2px 4px black;
     }
 
     h1, h5, h6 {
@@ -50,16 +52,18 @@
     }
 
     img {
-      max-width: 90%;
-      height: auto;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
       margin-bottom: 20px;
+      box-shadow: 0 0 10px black;
     }
   </style>
 </head>
 <body>
 
- 
-<img src="https://i.imgur.com/xL9RBig.jpeg" alt="IKI HYTAM APAY JAWA" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;">
+  <img src="https://i.imgur.com/xL9RBig.jpeg" alt="IKI HYTAM APAY JAWA">
   
   <marquee behavior="scroll" direction="left">𝙎𝙀𝙇𝘼𝙈𝘼𝙏 𝘿𝘼𝙏𝘼𝙉𝙂 𝘿𝙄 𝙒𝙀𝘽𝙎𝙄𝙏𝙀 𝙆𝙀𝙔𝙕𝙕</marquee>
 
