--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background: url('https://i.imgur.com/xL9RBig.jpeg') no-repeat center center fixed;
+      background: url('https://i.imgur.com/dNyEB3g.jpeg') no-repeat center center fixed;
       background-size: cover;
       height: 100vh;
       margin: 0;
