--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       font-size: 20px;
       font-weight: bold;
       margin-bottom: 24px;
-      color: yellow;
+      color: white;
       text-shadow: 2px 2px 4px black;
     }
 
