--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
     <button class="tombol">𝙆𝙇𝙄𝙆 𝙐𝙉𝙏𝙐𝙆 𝘽𝙀𝙍𝙂𝘼𝘽𝙐𝙉𝙂</button>
   </a>
 
+     <h5>LIST KONTAK</h5>
+  <a href="https://keyzz234.github.io/Keyzz.github.oi/">
+    <button class="tombol">𝙆𝙇𝙄𝙆 𝙐𝙉𝙏𝙐𝙆 𝙈𝙀𝙇𝙄𝙃𝘼𝙏 𝙇𝙄𝙎𝙏 𝙆𝙊𝙉𝙏𝘼𝙆</button>
+  </a>
+
   <h6>© KEYZZ JEBEH</h6>
 
 </body>
