--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     <button class="tombol">𝙇𝙄𝙎𝙏 𝙆𝙊𝙉𝙏𝘼𝙆 𝙋𝘼𝙍𝘼 𝘼𝘿𝙈𝙄𝙉</button>
   </a>
 
+  <a href="https://keyzz234.github.io/Keyzz.github.oi/"
+    target="_blank">https://keyzz234.github.io</a>
+</a>
+
   <h6>© KEYZZ JEBEH</h6>
 
 </body>
