--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
         KLIK
       </button>
     </div>
+     <div class="card">
+      <h3>
+        <i class="fa-brands fa-whatsapp"></i>
+        LIST GRUP
+      </h3>
+      <button class="btn" onclick="window.location.href='https://keyzz234.github.io/Jawa/'">
+        KLIK
+      </button>
+    </div>
   </div>
 
   <!-- Footer -->
